Design Change, and new data
Change the calculator design by making the font slightly bigger and brigher on both the keys and on screen. Add data to class and operant list.

--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
 				<div class="key"><button>AC</button></div>
 				<div class="key"><button>C</button></div>
 				<div class="key"><button>%</button></div>
-				<div class="key"><button>/</button></div>
+				<div class="key s divide"><button>/</button></div>
 
 				<div class="key"><button>7</button></div>
 				<div class="key"><button>8</button></div>
 				<div class="key"><button>9</button></div>
-				<div class="key"><button>*</button></div>
+				<div class="key s multiply"><button>*</button></div>
 
 				<div class="key"><button>4</button></div>
 				<div class="key"><button>5</button></div>
 				<div class="key"><button>6</button></div>
-				<div class="key"><button>-</button></div>
+				<div class="key s substract"><button>-</button></div>
 
 				<div class="key"><button>1</button></div>
 				<div class="key"><button>2</button></div>
 				<div class="key"><button>3</button></div>
-				<div class="key"><button>+</button></div>
+				<div class="key s add"><button>+</button></div>
 
 				<div class="key zero"><button>0</button></div>
-				<div class="key"><button>.</button></div>
-				<div class="key"><button>=</button></div>
+				<div class="key dot"><button>.</button></div>
+				<div class="key return"><button>=</button></div>
 
 		</div>
 	</div>
