Add apple like calculation

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	</div>
 </div>
 <script src="jquery.min.js"></script>
-<script src="script.js"></script>
+<!-- <script src="script.js"></script> -->
+<script src="apple-like.js"></script>
 </body>
 </html>
